# mcp-ipython

./: .gitignore  README.md  client_test.py  pyproject.toml  server.py  setup.py
