[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-ipython"
version = "0.0.1"
description = "A FastMCP backend that interfaces with an IPython kernel to execute Python commands and manage the kernel environment."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "AGPL-3.0-or-later" }
authors = [
  { name = "Kreijstal" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
]
dependencies = [
    "fastmcp",
    "jupyter_client",
]

[project.scripts]
mcp-ipython-server = "server:main"